# code_base_indexing

./: .gitignore  Cargo.toml  OCR.md  Qdrant.md  code_bases.json  docker-compose.yaml
prompt/: extract-technical-context-from-code.md  extract-test-scenarios-from-user-story.md  merge-into-complete-test-cases.md  playwright-e2e.md
src/: main.rs  ocr.rs  prompt.rs
src/command/: import.rs
store/: embed.json
